# tds_project2

./: LICENSE  README.md  ai_query.py  app.py  ass2of9.py  ass3of7.py  ass3of8.py  fg1_3.py  fgfunctions.py  fmain.py  function_ai.py  main.py  package-lock.json  pyproject.toml  requirements.txt  tasks.csv  tasks.xlsx  test.py  vercel.json
datafiles/: q-fastapi.csv
templates/: form.html
