[project]
name = "tds-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "openai>=1.68.0",
    "pandas>=2.2.3",
    "pyproject-toml>=0.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
