[project]
name = "tds-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "black>=25.1.0",
    "bs4>=0.0.2",
    "chardet>=5.2.0",
    "fastapi>=0.115.11",
    "jinja2>=3.1.6",
    "mdformat>=0.7.22",
    "numpy>=2.2.4",
    "openai>=1.68.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyproject-toml>=0.1.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]
